@@ -1,3 +1,9 @@
+2008-03-14 Sancho Lerena <slerena@gmail.com>
+
+	* reporting/fgraph.php: Removed stacked mode by default (could be enabled
+	by editing code and uncomenting classic-overlapped mode). Thanks to TurricanII
+	for reporting.
+
 2008-03-07 Sancho Lerena <slerena@gmail.com>
 
 	* operation/agentes/tactical.php, operation/servers/view_server.php: Final
